[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = ctr-predictor-mlops
package_name     = src
description      = This project builds an end-to-end MLOps pipeline for predicting Click-Through Rates (CTR) in digital marketing. It automates data processing, model training, and deployment, ensuring continuous monitoring and retraining for optimal performance. The project demonstrates scalable, reproducible MLOps practices for real-world applications.
long_description = 
author_name      = Eduardo Yepez
author_email     = emontenegro6@gatech.edu
license          = MIT
github_project   = https://github.com/ctr-predictor-mlops
version          = 0.0.dev0
url              = https://github.com/ejyepezm/ctr-predictor-mlops
